@@ -1,6 +1,11 @@
 /* the grid */
 table.todo_grid td[abbr='notes'] {white-space: normal !important}
 
+span.todo_state_idea {}
+span.todo_state_todo {color: red}
+span.todo_state_inprogress {color: orange}
+span.todo_state_done {color: green}
+
 /* the grid buttons */
 span.todo_btn_add {background: url(../images/add.png) no-repeat center left}
 span.todo_btn_edit {background: url(../images/edit.png) no-repeat center left}
